- Fixed: Fix for running as non-privileged user
- Fixed: Forecast button, displaying correct units
- Fixed: Honeywell thermostat fixes and improvements
- Fixed: I2C/BME280, Corrected oversampling
- Fixed: Increased heartbeat_check timeout to 5 minutes (process rebooted while doing a large database operation (migration of a sensor))
- Fixed: Kodi Notification setup display (hops)
- Fixed: MySensors IR switching
- Fixed: Next Protect, removing Heat/US checks
- Fixed: On/Off actions where incorrectly handled when setting the a RGB/W Color
- Fixed: P1 Smart Meter report chart, limit amount of decimals in tooltip
- Fixed: Philips Hue, should work correctly now again
- Fixed: Possible SQL Injection Vulnerability (Thanks to Fabio Carretto!)
- Fixed: Prevent touch stcroll while using jQuery wheel color picker
- Fixed: Put correct node name in button titles in association group view
- Fixed: Python Plugin protocols now always use Parameters values for Username/Password during authentication rather than cached values
- Fixed: Rain device for DarkSky
- Fixed: Shared server via mydomoticz bug.
- Fixed: Temp+Hum log button in devices view
- Fixed: Temperature sorting in report
- Fixed: timer where one part of the combination is even or odd week
- Fixed: Xiaomi Gateway Lum issue
- Fixed: Xiaomi, using correct (application default) way to update temp/hum/pressure
- Fixed: YouLess meter report
- Updated: dzVents (version 2.4.18, See dzVents/documentation/history.md)
- Updated: Event Editor
- Updated: New Gui pages/code for Utility/Weather/Temperature/Devices/Hardware Setup
- Updated: OZW configuration files
- Updated: Translations
- Updated: Weather Underground for use with the new API, option to specify Lat/Long as location
- Updated: Winddelen, using new API URL now, and including some more sensors

Version 4.9700 (June 23th 2018)
- Implemented: Blockly, now possible to directly add/update Text devices